# candlescout-pro

./: .env.example  .gitignore  Makefile  README.md  SETUP_COMPLETE.md  docker-compose.yml  init_db.sql  pyproject.toml  requirements.txt
.kiro/specs/candlescout-pro/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
django_app/: Dockerfile  celery_app.py  manage.py
django_app/apps/accounts/: admin.py  models.py
django_app/apps/candles/: admin.py  apps.py  models.py
django_app/apps/ml/: admin.py  apps.py  models.py
django_app/apps/signals/: admin.py  apps.py  models.py
django_app/apps/trading/: admin.py  apps.py  models.py
django_app/settings/: base.py  development.py  production.py  testing.py
services/: README.md
services/analysis_pipeline/: Dockerfile  __init__.py  main.py
services/api_service/: Dockerfile  __init__.py  main.py
services/common/: __init__.py  config.py
services/data_ingestion/: Dockerfile  __init__.py  main.py
services/ml_service/: Dockerfile  __init__.py  main.py
services/position_manager/: Dockerfile  __init__.py  main.py
services/signal_dispatcher/: Dockerfile  __init__.py  main.py
services/trade_executor/: Dockerfile  __init__.py  main.py
