[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "candlescout-pro"
version = "1.2.0"
description = "5-layer bullish candle analysis & automated trading system"
requires-python = ">=3.12"
authors = [{name = "CandleScout Pro"}]
license = {text = "MIT"}

dependencies = [
    # ── Django stack ──────────────────────────────────────────────
    "django>=6.0",
    "django-ninja>=1.3",
    "psycopg[async]>=3.2",
    "django-timescaledb>=0.3",
    "celery[redis]>=6.0",
    "django-celery-results>=2.5",
    "django-celery-beat>=2.6",
    "django-redis>=5.4",
    "python-decouple>=3.8",
    "cryptography>=43.0",

    # ── FastAPI stack ─────────────────────────────────────────────
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    "python-jose[cryptography]>=3.3",

    # ── Tortoise ORM ──────────────────────────────────────────────
    "tortoise-orm[asyncpg]>=0.21",
    "aerich>=0.7",

    # ── Redis ─────────────────────────────────────────────────────
    "redis[hiredis]>=5.1",

    # ── Data / ML ─────────────────────────────────────────────────
    "pandas>=2.2",
    "numpy>=2.1",
    "xgboost>=2.1",
    "scikit-learn>=1.5",
    "pywavelets>=1.7",
    "ta>=0.11",

    # ── Exchange connectors ───────────────────────────────────────
    "aiohttp>=3.10",
    "websockets>=13.0",

    # ── Telegram ─────────────────────────────────────────────────
    "python-telegram-bot>=21.0",

    # ── Utilities ─────────────────────────────────────────────────
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "loguru>=0.7",
    "tenacity>=9.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-xdist>=3.6",
    "pytest-benchmark>=4.0",
    "pytest-mock>=3.14",
    "factory-boy>=3.3",
    "faker>=28.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.0",
    "testcontainers[postgres,redis]>=4.8",
    "freezegun>=1.5",
    "responses>=0.25",
    "ruff>=0.7",
    "mypy>=1.12",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_app.settings.testing"
asyncio_mode = "auto"
addopts = "-v --strict-markers"
testpaths = ["tests"]
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (DB + Redis)",
    "e2e: End-to-end tests",
    "slow: Slow tests (ML, backtesting)",
    "benchmark: Performance benchmarks",
]
